File browsers show wrong context #83559

Closed
opened 2020-12-08 17:56:11 +01:00 by Steffen Dünner · 10 comments

System Information
Operating system: Linux-5.8.0-31-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.45.01

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-08 15:48, hash: 5b73083d4f
Worked: blender-2.92.0-ab9952e55fe1-linux64 (latest build bot build)

Short description of error
File browsers somehow mix up the type of files they're meant to show.
Or to say it in simpler words: an "Append" file browser doesn't show blend files but image files or the other way around.

Exact steps for others to reproduce the error

  • Open Blender and press F4 to open the im- / export dialog. Click on "Append":

  • The usual file browser opens, allowing to browse for blend files and showing the "Append" button in the lower right corner:
    image.png

  • Close the file browser again.

  • Now press F11 to open an image editor and click on the folder icon in the top header to open an image file.

  • This file browser now doesn't allow browsing for images but still for blend files and the button in the lower right corner still says "Append".

  • The opposite is true if you open a fresh Blender and directly press F11 to browse for an image. The file browser shows the correct context and allows to browse for images and to click on the "Open Image" button:
    image.png

  • Now close the dialog again and press F4 and select "Append": The file browser now is still in "image mode" and doesn't allow to browse for blend files.

**System Information** Operating system: Linux-5.8.0-31-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.45.01 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-08 15:48, hash: `5b73083d4f` Worked: blender-2.92.0-ab9952e55fe1-linux64 (latest build bot build) **Short description of error** File browsers somehow mix up the type of files they're meant to show. Or to say it in simpler words: an "Append" file browser doesn't show blend files but image files or the other way around. **Exact steps for others to reproduce the error** - Open Blender and press F4 to open the im- / export dialog. Click on "Append": - The usual file browser opens, allowing to browse for blend files and showing the "Append" button in the lower right corner: ![image.png](https://archive.blender.org/developer/F9494453/image.png) - Close the file browser again. - Now press F11 to open an image editor and click on the folder icon in the top header to open an image file. - This file browser now doesn't allow browsing for images but still for blend files and the button in the lower right corner still says "Append". - The opposite is true if you open a fresh Blender and directly press F11 to browse for an image. The file browser shows the correct context and allows to browse for images and to click on the "Open Image" button: ![image.png](https://archive.blender.org/developer/F9494467/image.png) - Now close the dialog again and press F4 and select "Append": The file browser now is still in "image mode" and doesn't allow to browse for blend files.

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscribers: @JulianEisel, @rjg

Added subscribers: @JulianEisel, @rjg

I can't reproduce this on Windows or Linux. Perhaps there is some step missing in your description? How do you close the file browser window?

@JulianEisel since you made changes to the file browser today, this is likely related.

I can't reproduce this on Windows or Linux. Perhaps there is some step missing in your description? How do you close the file browser window? @JulianEisel since you made changes to the file browser today, this is likely related.

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I close the file browser by clicking on "Cancel" in the lower right corner. I set my file browser to open fullscreen, maybe that might make a difference?

EDIT: I just tried it with "blender --factory-startup" and there it works as expected. The file browsers are windowed then.

EDIT2: It also works without factory defaults as soon as I set the file browsers to "New Window" instead of "Maximized Area".

I close the file browser by clicking on "Cancel" in the lower right corner. I set my file browser to open fullscreen, maybe that might make a difference? EDIT: I just tried it with "blender --factory-startup" and there it works as expected. The file browsers are windowed then. EDIT2: It also works without factory defaults as soon as I set the file browsers to "New Window" instead of "Maximized Area".

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

This issue was referenced by e17967f890

This issue was referenced by e17967f890a09c3bd810632c2c3244f9f988919f
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Julian Eisel self-assigned this 2020-12-08 21:24:44 +01:00
Member

Note that to recreate, it's best to set both the {nav Preferences > Interface > Temporary Editors > File Browser} and {nav Preferences > Interface > Temporary Editors > Render In} to Maximized Area. Also make sure that you keep the cursor over the same editor while it's not showing any of the maximized editors.

Under these circumstances the File Browser reuses its previous space data.

Note that to recreate, it's best to set both the {nav Preferences > Interface > Temporary Editors > File Browser} and {nav Preferences > Interface > Temporary Editors > Render In} to *Maximized Area*. Also make sure that you keep the cursor over the same editor while it's not showing any of the maximized editors. Under these circumstances the File Browser reuses its previous space data.

Thanks a lot! Problem is fixed :D

Thanks a lot! Problem is fixed :D
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83559
No description provided.